--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                 <img src="./assests/1724940555.4225214.jpg" alt="">
             </div>
         </section>
+
+        <section class="updateOne"></section>
+
         <section class="four">
             <div class="fourheading">
                 <h1>“<b>Let the experts</b> help you make <b>the right investment</b>”</h1>
